--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,22 @@
 {
-    "name": "venturecraft/revisionable",
+    "name": "imagina/revisionable",
     "license": "MIT",
     "description": "Keep a revision history for your models without thinking, created as a package for use with Laravel",
     "keywords": ["model", "laravel", "ardent", "revision", "audit", "history"],
-    "homepage": "http://github.com/venturecraft/revisionable",
+    "homepage": "http://github.com/imagina/revisionable",
     "authors": [
         {
             "name": "Chris Duell",
             "email": "me@chrisduell.com"
+        },
+        {
+            "name": "Imagina Colombia",
+            "email": "proyectos@imaginacolombia.com"
         }
     ],
     "support": {
-        "issues": "https://github.com/VentureCraft/revisionable/issues",
-        "source": "https://github.com/VentureCraft/revisionable"
+        "issues": "https://github.com/imagina/revisionable/issues",
+        "source": "https://github.com/imagina/revisionable"
     },
     "require": {
         "php": ">=5.4.0",
@@ -38,7 +42,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Venturecraft\\Revisionable\\RevisionableServiceProvider"
+                "Imagina\\Revisionable\\RevisionableServiceProvider"
             ]
         }
     }
